--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mammoth": "^1.4.16",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "nearley": "^2.20.1",
     "sequelize": "^6.6.2",
     "uuidv4": "^6.2.8"
   },
