--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "curl": "^0.1.4",
     "express": "^4.17.1",
+    "ffmpeg": "0.0.4",
+    "fibers": "^5.0.0",
+    "filepreview-dp": "^1.0.9",
+    "filepreview-es6": "^1.0.8",
+    "imagemagick": "^0.1.3",
     "jsonwebtoken": "^8.5.1",
     "mammoth": "^1.4.16",
     "multer": "^1.4.2",
@@ -21,6 +27,7 @@
     "mysql2": "^2.2.5",
     "nearley": "^2.20.1",
     "sequelize": "^6.6.2",
+    "unoconv": "^0.1.2",
     "uuidv4": "^6.2.8"
   },
   "devDependencies": {},
